добавлення курсору на кнопку закриття+оверлей на картки портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
                         <li class="project-item">
                             <a href="" class="project-item-link link">
                                 <div class="project-description-cover">
-                                <img src="./images/Portfolio/technocrak.jpg" alt="Специалисты на мониторе" width="370" height="297">
+                                    <img src="./images/Portfolio/technocrak.jpg" alt="Специалисты на мониторе" width="370" height="297">
                                     <p class="description-text-cover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
                                     исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -73,7 +73,11 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img src="./images/Portfolio/poster.jpg" alt="Спортсмены на постере" width="370" height="297">
+                                <div class="project-description-cover">
+                                    <img src="./images/Portfolio/poster.jpg" alt="Спортсмены на постере" width="370" height="297">
+                                    <p class="description-text-cover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
                                 <div class="project-description">
                                     <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
                                     <p class="project-text">Дизайн</p>
@@ -82,8 +86,12 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img src="./images/Portfolio/restaurant.jpg" alt="Логотип Seafood" width="370" height="297">
-                                <div class="project-description">
+                                <div class="project-description-cover">
+                                    <img src="./images/Portfolio/restaurant.jpg" alt="Логотип Seafood" width="370" height="297">
+                                    <p class="description-text-cover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                                    <div class="project-description">
                                     <h2 class="project-title">Ресторан Seafood</h2>
                                     <p class="project-text">Приложение</p>
                                 </div>
@@ -91,8 +99,12 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img src="./images/Portfolio/project-prime.jpg" alt="Наушники" width="370" height="297">
-                                <div class="project-description">
+                                <div class="project-description-cover">
+                                    <img src="./images/Portfolio/project-prime.jpg" alt="Наушники" width="370" height="297">
+                                    <p class="description-text-cover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
+                                    <div class="project-description">
                                     <h2 class="project-title">Проект Prime</h2>
                                     <p class="project-text">Маркетинг</p>
                                 </div> 
@@ -100,7 +112,11 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img src="./images/Portfolio/project-boxes.jpg" alt="Картонные коробки" width="370" height="297">
+                                <div class="project-description-cover">
+                                    <img src="./images/Portfolio/project-boxes.jpg" alt="Картонные коробки" width="370" height="297">
+                                    <p class="description-text-cover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
                                 <div class="project-description">
                                     <h2 class="project-title">Проект Boxes</h2>
                                     <p class="project-text">Приложение</p>
@@ -109,7 +125,11 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img src="./images/Portfolio/inspiration.jpg" alt="Веб-сайт на мониторе" width="370" height="297">
+                                <div class="project-description-cover">
+                                    <img src="./images/Portfolio/inspiration.jpg" alt="Веб-сайт на мониторе" width="370" height="297">
+                                    <p class="description-text-cover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
                                 <div class="project-description">
                                     <h2 class="project-title" lang="en">Inspiration has no Borders</h2>
                                     <p class="project-text">Веб-сайт</p>
@@ -118,7 +138,11 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img src="./images/Portfolio/edition.jpg" alt="Открытая книга" width="370" height="297">
+                                <div class="project-description-cover">
+                                    <img src="./images/Portfolio/edition.jpg" alt="Открытая книга" width="370" height="297">
+                                    <p class="description-text-cover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
                                 <div class="project-description">
                                     <h2 class="project-title">Издание Limited Edition</h2>
                                     <p class="project-text">Дизайн</p>
@@ -127,7 +151,11 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img src="./images/Portfolio/project-lab.jpg" alt="Бирка" width="370" height="297">
+                                <div class="project-description-cover">
+                                    <img src="./images/Portfolio/project-lab.jpg" alt="Бирка" width="370" height="297">
+                                    <p class="description-text-cover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
                                 <div class="project-description">
                                     <h2 class="project-title">Проект LAB</h2>
                                     <p class="project-text">Маркетинг</p>
@@ -136,7 +164,11 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img src="./images/Portfolio/business.jpg" alt="бизнес приложение на ноутбуке" width="370" height="297">
+                                <div class="project-description-cover">
+                                    <img src="./images/Portfolio/business.jpg" alt="бизнес приложение на ноутбуке" width="370" height="297">
+                                    <p class="description-text-cover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
                                 <div class="project-description">
                                     <h2 class="project-title" lang="en">Growing Business</h2>
                                     <p class="project-text">Приложение</p>
